--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -79,6 +79,80 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
     return this.args.query + '\nBind keys: ' + this.args.bindVars.keySet() + '\nAccess level: ' + this.localRunAsMode;
   }
 
+  @SuppressWarnings('PMD.ApexCRUDViolation')
+  public static List<Rollup__mdt> getRollupMetadata() {
+    List<Rollup__mdt> matchingMetadata = [
+        SELECT
+          MasterLabel,
+          DeveloperName,
+          LookupObject__c,
+          LookupObjectText__c,
+          LookupObject__r.QualifiedApiName,
+          CalcItem__c,
+          CalcItemText__c,
+          CalcItem__r.QualifiedApiName,
+          RollupFieldOnCalcItem__c,
+          RollupFieldOnCalcItemText__c,
+          RollupFieldOnCalcItem__r.QualifiedApiName,
+          LookupFieldOnCalcItem__c,
+          LookupFieldOnCalcItemText__c,
+          LookupFieldOnCalcItem__r.QualifiedApiName,
+          LookupFieldOnLookupObject__c,
+          LookupFieldOnLookupObjectText__c,
+          LookupFieldOnLookupObject__r.QualifiedApiName,
+          RollupFieldOnLookupObject__c,
+          RollupFieldOnLookupObjectText__c,
+          RollupFieldOnLookupObject__r.QualifiedApiName,
+          UltimateParentLookup__c,
+          UltimateParentLookup__r.QualifiedApiName,
+          CalcItemWhereClause__c,
+          ChangedFieldsOnCalcItem__c,
+          ConcatDelimiter__c,
+          CurrencyFieldMapping__c,
+          FullRecalculationDefaultNumberValue__c,
+          FullRecalculationDefaultStringValue__c,
+          GrandparentRelationshipFieldPath__c,
+          GroupByFields__c,
+          GroupByRowEndDelimiter__c,
+          GroupByRowStartDelimiter__c,
+          IsDistinct__c,
+          IsFullRecordSet__c,
+          IsRollupStartedFromParent__c,
+          IsTableFormatted__c,
+          LimitAmount__c,
+          OneToManyGrandparentFields__c,
+          OrderByFirstLast__c,
+          RollupControl__c,
+          RollupOperation__c,
+          RollupToUltimateParent__c,
+          SharingMode__c,
+          ShouldRunWithoutCustomSettingEnabled__c,
+          SplitConcatDelimiterOnCalcItem__c,
+          (SELECT Id, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r ORDER BY Ranking__c, DeveloperName),
+          RollupGrouping__r.Id
+        FROM Rollup__mdt
+        WHERE RollupControl__r.ShouldAbortRun__c = FALSE
+        ORDER BY LookupObject__c
+      ];
+    // we have to do transforms on the Entity Definition fields because custom objects/custom fields
+    // have references that otherwise won't work with the rest of the code
+    for (Rollup__mdt meta : matchingMetadata) {
+      meta.CalcItem__c = meta.CalcItem__r.QualifiedApiName ?? meta.CalcItemText__c;
+      meta.LookupFieldOnCalcItem__c = meta.LookupFieldOnCalcItem__r.QualifiedApiName ?? meta.LookupFieldOnCalcItemText__c;
+      meta.LookupFieldOnLookupObject__c = meta.LookupFieldOnLookupObject__r.QualifiedApiName ?? meta.LookupFieldOnLookupObjectText__c;
+      meta.RollupFieldOnCalcItem__c = meta.RollupFieldOnCalcItem__r.QualifiedApiName ?? meta.RollupFieldOnCalcItemText__c;
+      meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObject__r.QualifiedApiName ?? meta.RollupFieldOnLookupObjectText__c;
+      meta.LookupObject__c = meta.LookupObject__r.QualifiedApiName ?? meta.LookupObjectText__c;
+
+      meta.GroupByRowEndDelimiter__c = meta.GroupByRowEndDelimiter__c?.unescapeJava();
+      meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
+      meta.SharingMode__c = meta.SharingMode__c != null ? meta.SharingMode__c : RollupMetaPicklists.SharingMode.SystemLevel;
+      meta.UltimateParentLookup__c = meta.UltimateParentLookup__r.QualifiedApiName;
+    }
+
+    return matchingMetadata;
+  }
+
   private void createQueryLog(String message) {
     RollupLogger.Instance.Log(message, this, System.LoggingLevel.DEBUG);
   }
